@@ -17,7 +17,7 @@
 	<li><a href="#perltidy_change_log">Perltidy Change Log</a></li>
 	<ul>
 
-		<li><a href="#2007_04_28">2007 04 28</a></li>
+		<li><a href="#2007_04_24">2007 04 24</a></li>
 		<li><a href="#2006_07_19">2006 07 19</a></li>
 		<li><a href="#2006_06_14">2006 06 14</a></li>
 		<li><a href="#2003_10_21">2003 10 21</a></li>
@@ -56,7 +56,7 @@
 <h1><a name="perltidy_change_log">Perltidy Change Log</a></h1>
 <p>
 </p>
-<h2><a name="2007_04_28">2007 04 28</a></h2>
+<h2><a name="2007_04_24">2007 04 24</a></h2>
 <pre>
  -ole (--output-line-ending) and -ple (--preserve-line-endings) should
  now work on all systems rather than just unix systems. Thanks to Dan
