@@ -1,7 +1,9 @@
+<?xml version="1.0" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Welcome to Perltidy!</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rev="made" href="mailto:root@localhost" />
 </head>
 
@@ -33,9 +35,10 @@ License -- please see the included file ``COPYING'' for details.</p>
 </p>
 <hr />
 <h1><a name="prerequisites">PREREQUISITES</a></h1>
-<p>Perltidy is programmed to work with versions of Perl as old as 5.004.
-(You can find your version with <code>perl -v</code>).  However, some systems this
-old may have problems, particularly Windows versions.</p>
+<p>An effort has been made to keep <code>perltidy</code> compatable with versions of Perl as
+old as 5.004, and this release was tested on Perl version 5.004_04 under linux.
+(You can find your version with <code>perl -v</code>). However, some systems this old may
+have problems, particularly Windows versions.</p>
 <p>The following modules are not required, but perltidy may use them if
 detected:</p>
 <pre>
@@ -49,12 +52,13 @@ about 2 Mb.</p>
 <h1><a name="download">DOWNLOAD</a></h1>
 <p>There are two source distribution files:</p>
 <ul>
-<li></li>
-A <em>.tgz</em> ``tarball'', with Unix-style &lt;lf&gt; line endings, and
-<p></p>
-<li></li>
-A zip file, <em>.zip</em>, with Windows-style &lt;cr&gt;&lt;lf&gt; line endings.
-<p></p></ul>
+<li>
+<p>A <em>.tgz</em> ``tarball'', with Unix-style &lt;lf&gt; line endings, and</p>
+</li>
+<li>
+<p>A zip file, <em>.zip</em>, with Windows-style &lt;cr&gt;&lt;lf&gt; line endings.</p>
+</li>
+</ul>
 <p>In addition, the web site has links to debian and RPM packages.</p>
 <p>
 </p>
