@@ -3182,7 +3182,7 @@ purpose of this rule is to prevent generating confusing filenames such as
 </p>
 <hr />
 <h1><a name="version">VERSION</a></h1>
-<p>This man page documents perltidy version 20070428.</p>
+<p>This man page documents perltidy version 20070424.</p>
 <p>
 </p>
 <hr />
