@@ -20,7 +20,6 @@
 		<li><a href="#improved_vertical_alignment">Improved Vertical Alignment</a></li>
 		<li><a href="#improved___formatting">improved ?: formatting</a></li>
 		<li><a href="#improved_internal_if_unless_formatting">improved internal if/unless formatting</a></li>
-		<li><a href="#enable_ole_under_windows">enable -ole under Windows</a></li>
 		<li><a href="#documentation">Documentation</a></li>
 		<li><a href="#html_writer">HTML writer</a></li>
 		<li><a href="#automatic_style_detection">Automatic style detection</a></li>
@@ -63,12 +62,6 @@ the following statement to be indented more than the if:</p>
       if $encounter-&gt;description eq 'klingon'
       and $ship-&gt;firepower &gt;= $encounter-&gt;firepower
       and $location-&gt;status ne 'neutral';</pre>
-<p>
-</p>
-<h2><a name="enable_ole_under_windows">enable -ole under Windows</a></h2>
-<p>This only works under unix (or cygwin) at present.  It doesn't work for Windows
-versions, such as Active State, because they change line endings that they
-don't like.</p>
 <p>
 </p>
 <h2><a name="documentation">Documentation</a></h2>
