@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>A loop</title>
-  <META name="GENERATOR" CONTENT="alconv $Revision: 1.27 $">
+  <META name="GENERATOR" CONTENT="alconv $Revision: 1.28 $">
   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#A0E0E0">
