@@ -1,5 +1,5 @@
 Perltidy Change Log
-  2007 04 28
+  2007 04 24
      -ole (--output-line-ending) and -ple (--preserve-line-endings) should
      now work on all systems rather than just unix systems. Thanks to Dan
      Tyrell.
